--- a/Express/Es01_Express/static/index.html
+++ b/Express/Es01_Express/static/index.html
@@ -19,5 +19,6 @@
 	<br>
 	<input type="button" value="invia richiesta get" id="btnInvia"/>
 	<input type="button" value="invia richiesta post" id="btnInvia2"/>
+	<input type="button" value="passaggio di parametri all'interno della risorsa" id="btnInvia3"/>
 </body>
 </html>
